--- a/json.html
+++ b/json.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Teste de exibico json</title>
+    <title>Covinhas</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <script src='fenrir.js'></script>
 </head>
